--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         hell0, git!
-        bye, git!
+        bye, git!!
         again hie!
         get out buddy!
         pull put!
