--- a/hello.html
+++ b/hello.html
@@ -2,12 +2,21 @@
 <html lang="en">
     <head>
         <title>git</title>
+        <style>
+            div{
+                color:blue;
+            }
+        </style>
     </head>
     <body>
-        hell0, git!
-        bye, git!!
-        again hie!
-        get out buddy!
-        pull put!
+        <div>
+            hell0, git!
+            bye, git!!
+            again hie!
+            get out buddy!
+            pull put!
+        </div>
+
+
     </body>
 </html>
