--- a/hello.html
+++ b/hello.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div>
-            hell0, git!!
+            <h1>hell0, git!!</h1>
             bye, git!!
             again hie!
             get out buddy!
