--- a/hello.html
+++ b/hello.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div>
-            <h1>hell0, git!!</h1>
+            <h1 style="color:blue;">hell0, git!!</h1>
             bye, git!!
             again hie!
             get out buddy!
